# sqlalchemy-redshift

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CODE_OF_CONDUCT.md  MANIFEST.in  Pipfile  README.md  README.rst  buildspec_test.yml  pull_reserved_words.sh  pyproject.toml  requirements-docs.txt  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  label-sync.yml  pr.yml  release.yml  security.yml  stale.yml  tests.yml
ci/: README.txt  build-spec.yml  ci-pipeline.yml
docs/: Makefile  alembic.rst  commands.rst  conf.py  ddl-compiler.rst  dialect.rst  index.rst  make.bat  models.rst
redshift_sqlalchemy/: __init__.py  commands.py  compat.py  dialect.py  models.py  redshift-ssl-ca-cert.pem
sqlalchemy_redshift/: __init__.py  commands.py  compat.py  ddl.py  dialect.py  redshift-ca-bundle.crt
tests/: conftest.py  test_alembic_dialect.py  test_alter_table.py  test_build_config.py  test_column_loading.py  test_compiler.py  test_constraint_names.py  test_copy_command.py  test_create_library.py  test_create_table_as.py  test_create_view.py  test_ddl_compiler.py  test_default_ssl.py  test_delete_stmt.py  test_dialect_types.py  test_dialects.py  test_get_table_attributes.py  test_iam_auth.py  test_insert_stmt.py  test_introspection.py  test_long_tablename.py  test_materialized_views.py  test_models.py  test_postfetch_lastrowid.py  test_reflection.py  test_reflection_views.py  test_relationkey_unquoted.py  test_simple_query.py  test_unload_from_select.py
tests/rs_sqla_test_utils/: db.py  models.py  utils.py
