[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlalchemy-redshift"
version = "0.8.15.dev0"
description = "Amazon Redshift Dialect for sqlalchemy"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {text = "MIT"}
authors = [
    {name = "Matt George", email = "mgeorge@gmail.com"},
]
maintainers = [
    {name = "Thomas Grainger", email = "sqlalchemy-redshift@graingert.co.uk"},
]
requires-python = ">=3.4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "SQLAlchemy>=0.9.2,<2.0.0",
    "packaging",
]

[project.urls]
Homepage = "https://github.com/sqlalchemy-redshift/sqlalchemy-redshift"
Repository = "https://github.com/sqlalchemy-redshift/sqlalchemy-redshift"

[project.entry-points."sqlalchemy.dialects"]
redshift = "sqlalchemy_redshift.dialect:RedshiftDialect_psycopg2"
"redshift.psycopg2" = "sqlalchemy_redshift.dialect:RedshiftDialect_psycopg2"
"redshift.psycopg2cffi" = "sqlalchemy_redshift.dialect:RedshiftDialect_psycopg2cffi"
"redshift.redshift_connector" = "sqlalchemy_redshift.dialect:RedshiftDialect_redshift_connector"

[tool.setuptools.packages.find]
include = ["sqlalchemy_redshift*", "redshift_sqlalchemy*"]

[tool.setuptools.package-data]
sqlalchemy_redshift = ["redshift-ca-bundle.crt"]

[project.optional-dependencies]
dev = [
    "alembic==1.9.2",
    "packaging==20.4",
    "psycopg2==2.8.6",
    "psycopg2cffi==2.8.1",
    "pytest==7.2.1",
    "requests==2.25.0",
    "redshift_connector==2.0.907",
    "flake8==4.0.1",
]
test = [
    "alembic==1.9.2",
    "packaging==20.4",
    "psycopg2==2.8.6",
    "psycopg2cffi==2.8.1",
    "pytest==7.2.1",
    "requests==2.25.0",
    "redshift_connector==2.0.907",
]
docs = [
    "sphinx==1.6.3",
    "numpydoc==0.6.0",
    "psycopg2-binary==2.9.1",
    "jinja2<3.1.0",
]

[tool.pytest.ini_options]
addopts = "--doctest-modules --doctest-glob='*.rst' --ignore=setup.py --ignore=docs/conf.py"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.uv]
dev-dependencies = [
    "alembic==1.9.2",
    "packaging==20.4",
    "psycopg2==2.8.6",
    "psycopg2cffi==2.8.1",
    "pytest==7.2.1",
    "requests==2.25.0",
    "redshift_connector==2.0.907",
    "flake8==4.0.1",
]